# var

./: .clangd  CMakeLists.txt  Makefile  compile_commands.json  main.cc
.cache/clangd/index/: controller.cc.C3AE59C25010654B.idx  main.cc.5A8335C2990DD3D5.idx
b/: CMakeCache.txt  Makefile  cmake_install.cmake
drogon/: controller.cc
flask/: Dockerfile  app.py  build.sh  config.yaml  requirements.txt
graphics/rt/: .gitignore  main.cc
keithui/: .gitignore  hello
keithui/hello.dSYM/Contents/Resources/DWARF/: hello
keithui/hello.dSYM/Contents/Resources/Relocations/aarch64/: hello.yml
llama/: .gitignore  bert.ipynb  gensim.ipynb  json-chat.ipynb  oai_test.ipynb  requirements.txt
llama/archive/: Fava_oai.txt
llama/demo_articles/: Fava_claude.txt  Gastpar_claude.txt  Haringsma_claude.txt  Wildcard.txt
mojo/: hello  hello.mojo
notcurses/: build.sh  compile_commands.json  house.txt  nc  nc.c
notcurses/.cache/clangd/index/: nc.c.5383296CF5022FB7.idx
notes/: data_engineering.txt  distributed_inference.txt
pxli/: .gitignore  CMakeLists.txt  pxli.cc
pxli/.cache/clangd/index/: pxli.cc.CD7420130425F123.idx
ratui/: hello.js  notes.txt
ratui/h2/: hello2.js  hello2.wasm
ratui/h2/html_template/: shell_minimal.html
simple_analytics/: readme.md
simple_analytics++/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  help.txt
simple_analytics++/include/handlers/: Handler.h
simple_analytics++/internal/: CMakeLists.txt
simple_analytics++/internal/handlers/: Handler.cc  handlers.h  ping.cc
simple_analytics++/internal/startup/: startup.cc  startup.h
simple_analytics++/internal/telemetry/: telemetry.cc  telemetry.h
simple_analytics++/internal/utils/: utils.h
simple_analytics++/notes/: Async_IO_Summary.md
simple_analytics++/src/: main.cc  main.cpp  server.h  startup.cc  telemetry.cc
simple_analytics++/src/handlers/: Handler.cpp
simple_analytics++/src/routes/: handlers.h  ping.cc
simple_analytics++/tests/: ping.cc  test.cc  test_main.cc  test_old.cc
simple_analytics/api/: CMakeLists.txt  Dockerfile  README.md  build.sh  compile_commands.json  handlers.h  help.txt  main.c  mock_evhttp.h  server  server.c  test  test.cpp  utils.h
simple_analytics/api/scripts/: build.sh  start.sh
simple_analytics/api/tests/: CMakeLists.txt  handlers_test.cpp  test.cpp
simple_analytics/api/wrappers/spdlog/: spdlog_wrapper.cpp  spdlog_wrapper.h
simple_analytics/client/: bun.lockb  package.json
swift/: Package.swift
swift/Sources/: main.swift
